# steam-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
src/steam_mcp_server/: server.py
